# itrabaho-api

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Procfile  README.md  data.json  newdata.json  pyproject.toml  requirements.txt  skills_pattern.jsonl
backend/: globals.py  settings.py  setup.py  urls.py
backend/itrabaho/: admin.py  apps.py  choices.py  controllers.py  managers.py  models.py  serializers.py  urls.py
backend/itrabaho/migrations/: 0001_initial.py  0002_alter_jobpostmodel_description.py  0002_alter_matchmodel_rank.py  0002_alter_user_birthdate.py  0002_auto_20210915_1657.py  0002_auto_20211018_1520.py  0002_usermodel_usertype.py  0003_alter_jobpostmodel_status.py  0003_auto_20210917_0231.py  0003_auto_20211018_1525.py  0004_auto_20211007_0250.py  0004_jobpostmodel_recruit.py  0004_merge_20211018_1538.py  0005_auto_20211011_1418.py  0005_auto_20211011_1444.py  0005_auto_20220207_1911.py  0006_auto_20211011_1835.py  0006_auto_20211014_2338.py  0007_merge_0005_auto_20211011_1418_0006_auto_20211011_1835.py  0008_auto_20211017_1521.py  0008_merge_20211015_0236.py  0009_auto_20211016_0645.py  0009_categorymodel_skillmodel.py  0010_auto_20211017_1216.py  0011_alter_applicantmodel_profile.py  0012_auto_20211017_1826.py  0013_alter_jobpostmodel_description.py
backend/itrabaho/serializers/: __init__.py  base.py  query.py  request.py  response.py
