[tool.poetry]
name = "itrabaho-api"
version = "0.1.0"
description = ""
authors = ["amoresjan <amoresjan14@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
black = "^21.8b0"
djangorestframework = "^3.12.4"
pylint = "^2.10.2"
psycopg2 = "^2.9.1"
isort = "^5.9.3"
twilio = "^6.63.2"
python-dotenv = "^0.19.0"
drf-yasg = "^1.20.0"
django-cors-headers = "^3.8.0"
pre-commit = "^2.15.0"
pipenv = "^2021.5.29"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
