[tool.poetry]
name = "itrabaho-api"
version = "0.1.0"
description = ""
authors = ["amoresjan <amoresjan14@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
djangorestframework = "^3.12.4"
twilio = "^6.63.2"
python-dotenv = "^0.19.0"
drf-yasg = "^1.20.0"
django-cors-headers = "^3.8.0"
pre-commit = "^2.15.0"
pipenv = "^2021.5.29"
dj-database-url = "^0.5.0"
gunicorn = "^20.1.0"
whitenoise = "^5.3.0"
django-heroku = "^0.3.1"
psycopg2-binary = "^2.9.1"
spacy = "^3.2.1"
jsonlines = "^3.0.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
